very minor code replacement